# arxivql

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
arxivql/: __init__.py  _query.py  _utils.py  taxonomy.py
tests/: live_arxiv_queries.py  test_article_id.py  test_catalog.py  test_query.py  test_query_errors.py  test_taxonomy.py
