[tool.poetry]
name = "arxivql"
version = "0.1.1"
description = "A pythonic query builder for arXiv search API"
authors = ["Roman Zubov <romazu@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romazu/arxivql"
keywords = ["arxiv", "api", "academic", "articles", "query", "language", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


